test/corpus/attr_fixtures.txt
================================================================================
Fixture attr-complex (htmljs target)
================================================================================

<a a=123+256 b c= d=(a + (1/2) /* comment */)>test</a>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-complex-functions (htmljs target)
================================================================================

tag a = function (x) { console.log("y") } b
tag a = (x) => { console.log("y") } b
tag a = x => { console.log("y") } b
tag a = x => y b
tag a = x => y + 1 b
tag a = x => y = 1 b
tag a = async x => { console.log("y") } b
tag a = async function (x) { console.log("y") } b

--------------------------------------------------------------------------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end)))

================================================================================
Fixture attr-complex-instanceof (htmljs target)
================================================================================

var a = 'foo' instanceof String

tag a = 'foo' instanceof = String
tag a = 'foo' instanceof := String
tag a = 'foo' instanceof= String
tag a = 'foo' instanceof;

tag a = 'foo' instanceof-test;
tag a = 'foo' instanceof_test;

tag a = 'foo' instanceof, b

<tag a = 'foo' instanceof></tag>
<tag a = 'foo' instanceof/>

tag a = 'foo' instanceofthing String

tag a = 'foo' instanceof

--------------------------------------------------------------------------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (open_tag_end_self)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end)))

================================================================================
Fixture attr-complex-unary (htmljs target)
================================================================================

tag a = class b {}

tag a = class {}, b

<tag a = class {}></tag>

<tag a = class {}/>

tag a = classthing b

tag a = testclass b

tag a = test_class b

tag a = test$class b

tag a = test+class b {}

--------------------------------------------------------------------------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end)))

================================================================================
Fixture attr-concise-hyphens (htmljs target)
================================================================================

a b=c -- y

a [b=c -- y]

--------------------------------------------------------------------------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_group_close))
    (concise_open_tag_end)
    (element_end)))

================================================================================
Fixture attr-escape-characters (htmljs target)
================================================================================

<div foo='\"hello\"'>
    Hello World!
</div>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-escaped-dollar (htmljs target)
================================================================================

<span data-foo="\$name"></span>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-inc-and-dec (htmljs target)
================================================================================

a foo=a++ bar=b--
a foo=++a bar=--b

--------------------------------------------------------------------------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end)))

================================================================================
Fixture attr-int-and-id (htmljs target)
================================================================================

<a data=123 data=abc></a>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-literal-false (htmljs target)
================================================================================

<div data=false></div>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-literal-null (htmljs target)
================================================================================

<div data=null></div>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-literal-true (htmljs target)
================================================================================

<div data=true></div>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-literal-undefined (htmljs target)
================================================================================

<div data=undefined></div>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-method-shorthand (htmljs target)
================================================================================

<foo onclick(event){}/>

<foo onclick(event){
  console.log("hello");
  event.preventDefault();
}/>

<foo onclick(event) {
  console.log("hello");
  event.preventDefault();
}/>

<foo onclick (event) {
  console.log("hello");
  event.preventDefault();
}/>

<foo(event){
  console.log("hello");
  event.preventDefault();
}/>

<foo(event) {
  console.log("hello");
  event.preventDefault();
}/>

<foo (event) {
  console.log("hello");
  event.preventDefault();
}/>

foo onclick(event){
  console.log("hello");
  event.preventDefault();
}

foo onclick(event) {
  console.log("hello");
  event.preventDefault();
}

foo onclick (event) {
  console.log("hello");
  event.preventDefault();
}

foo(event){
  console.log("hello");
  event.preventDefault();
}

foo(event) {
  console.log("hello");
  event.preventDefault();
}

foo (event) {
  console.log("hello");
  event.preventDefault();
}

<a b() { c / (d) }/>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (concise_open_tag_end)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end)))

================================================================================
Fixture attr-method-shorthand-with-type-parameters (htmljs target)
================================================================================

<foo<A>(event: A){
  console.log(event.type)
}/>

<foo<A> (event: A){
  console.log(event.type)
}/>

<foo <A>(event: A){
  console.log(event.type)
}/>

<foo <A> (event: A){
  console.log(event.type)
}/>

<foo<A, B = string>(event: A & B){
  console.log(event.type)
}/>

<foo<A, B = string> (event: A & B){
  console.log(event.type)
}/>

<foo <A, B = string>(event: A & B){
  console.log(event.type)
}/>

<foo <A, B = string> (event: A & B){
  console.log(event.type)
}/>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_args
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_args
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_args
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_args
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end)))

================================================================================
Fixture attr-method-with-type-parameters (htmljs target)
================================================================================

<foo onclick<A>(event: A){
  console.log(event.type)
}/>

<foo onclick<A> (event: A){
  console.log(event.type)
}/>

<foo onclick <A>(event: A){
  console.log(event.type)
}/>

<foo onclick <A> (event: A){
  console.log(event.type)
}/>

<foo onclick<A, B = string>(event: A & B){
  console.log(event.type)
}/>

<foo onclick<A, B = string> (event: A & B){
  console.log(event.type)
}/>

<foo onclick <A, B = string>(event: A & B){
  console.log(event.type)
}/>

<foo onclick <A, B = string> (event: A & B){
  console.log(event.type)
}/>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (type_params
      (type_open)
      (type_expr)
      (type_close))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (method_body
      (method_body_open)
      (method_body_expr)
      (method_body_close))
    (open_tag_end_self)
    (element_end)))

================================================================================
Fixture attr-multi-line-comment (htmljs target)
================================================================================

<a a=123+456/* test */ b=a+'123'>test</a>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

================================================================================
Fixture attr-multi-line-string (htmljs target)
================================================================================

<div data="
abc
124"></div>

--------------------------------------------------------------------------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))
